add API integration for AVL consumer subscriptions
